--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link href="./App.css" rel="stylesheet">
+        <script type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
+<script type="text/javascript">
+  emailjs.init('1OGts2RANcB0Nyq8A')
+</script>
     </head>
     <body>
 
@@ -13,5 +19,6 @@
 
     <script src="./App.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-    </body>
+    
+</body>
 </html>
