--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>👱🏼‍♀️ Candela Salvatto</title>
+        <title>Candela Salvatto</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Portfolio Web Candela Salvatto">
+        <link rel="icon" href="../public/header-logo-chico.png" />
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link href="./App.css" rel="stylesheet">
         <script type="text/javascript"
